--- a/fridge.html
+++ b/fridge.html
@@ -25,7 +25,7 @@
         }
         .fullWidth { width: 100%; }
     </style>
-    <title>E06-Knipper</title>
+    <title>Fridge-Knipper</title>
     <meta charset="UTF-8">
 </head>
 <body onload="doStartClock()">
