--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	  // loop through the list of files, set "file" to each file name
     		for (let file of data) {
 				
-				fname = file.name;           
+				fname = file.Liam;           
 				fpath = "https://aptokash.github.io/SD330/" + fname;  
 				
 				htmlString += "<p>" + fname ;
