--- a/Courses_Foxbooks.html
+++ b/Courses_Foxbooks.html
@@ -39,8 +39,8 @@
                             <p><strong>Course ID:</strong> ${course.courseID}</p>
                             <p><strong>Semester:</strong> ${course.semester}</p>
                             <p><strong>Professor:</strong> ${course.professor}</p>
-                            <p><strong>Professor:</strong> ${course.credits}</p>
-                            <p><strong>Professor:</strong> ${course.schedule}</p>
+                            <p><strong>Credits:</strong> ${course.credits}</p>
+                            <p><strong>Schedule:</strong> ${course.schedule}</p>
                           </li>`;
         });
 
