--- a/Books_Foxbooks.html
+++ b/Books_Foxbooks.html
@@ -39,8 +39,8 @@
                             <p><strong>Author:</strong> ${book.author}</p>
                             <p><strong>ISBN:</strong> ${book.ISBN}</p>
                             <p><strong>Course ID:</strong> ${book.courseID}</p>
-                            <p><strong>Course ID:</strong> ${book.publisher}</p>
-                            <p><strong>Course ID:</strong> ${book.publishedYear}</p>
+                            <p><strong>Publisher:</strong> ${book.publisher}</p>
+                            <p><strong>Published Year:</strong> ${book.publishedYear}</p>
                          </div>`;
         });
 
