--- a/Home_Foxbooks.html
+++ b/Home_Foxbooks.html
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <li><a href="Home_Foxbooks.html">Home</a></li>
-        <li><a href="Books_Foxbooks.html">Books</a></li>
         <li><a href="Courses_Foxbooks.html">Courses</a></li>
-        <li><a href="404_Foxbooks.html">Contact</a></li>
+        <li><a href="Books_Foxbooks.html">Books</a></li>
+        <li><a href="404_Foxbooks.html">Contact (Under Repair)</a></li>
       </ul>
     </nav>
   </header>
