--- a/404_Foxbooks.html
+++ b/404_Foxbooks.html
@@ -14,12 +14,18 @@
         <li><a href="Home_Foxbooks.html">Home</a></li>
         <li><a href="Courses_Foxbooks.html">Courses</a></li>
         <li><a href="Books_Foxbooks.html">Books</a></li>
+        <li><a href="Books_Foxbooks.html">Books</a></li>
         
       </ul>
     </nav>
   </header>
 
   <main>
+    <ul class="breadcrumb">
+      <li><a href="Home_Foxbooks.html">Home</a></li>
+      <li><a href="Courses_Foxbooks.html">Courses</a></li> 
+      <li><a href="Books_Foxbooks.html">Books</a></li> 
+    </ul>
     <h2>404 - Page Not Found</h2>
     <p>Oops! The page you are looking for might be under construction or does not exist.</p>
     <div id="div1">
