--- a/404_Foxbooks.html
+++ b/404_Foxbooks.html
@@ -14,7 +14,7 @@
         <li><a href="Home_Foxbooks.html">Home</a></li>
         <li><a href="Courses_Foxbooks.html">Courses</a></li>
         <li><a href="Books_Foxbooks.html">Books</a></li>
-        <li><a href="Books_Foxbooks.html">Books</a></li>
+        <li><a href="404_Foxbooks.html">Contact (Under Repair)</a></li>
         
       </ul>
     </nav>
@@ -32,7 +32,6 @@
       <img src="https://cdn3.iconfinder.com/data/icons/books-outline-4/60/Ripped-Out-Page-torn-book-512.png";
       id="404" width= 610px height= 450px>
   </div>
-    <p><a href="Home_Foxbooks.html">Go back to the home page</a></p>
   </main>
 
   <footer><small><hr>(c) L. Knipper - November 27, 2023</footer></small>
