--- a/404_Foxbooks.html
+++ b/404_Foxbooks.html
@@ -11,7 +11,7 @@
     <h1>FoxBooks</h1>
     <nav>
       <ul>
-        <li><a href="Home_Foxbooks.html">Home</a></li>
+        <li><a href="foxbooks.html">Home</a></li>
         <li><a href="Courses_Foxbooks.html">Courses</a></li>
         <li><a href="Books_Foxbooks.html">Books</a></li>
         <li><a href="404_Foxbooks.html">Contact (Under Repair)</a></li>
@@ -22,7 +22,7 @@
 
   <main>
     <ul class="breadcrumb">
-      <li><a href="Home_Foxbooks.html">Home</a></li>
+      <li><a href="foxbooks.html">Home</a></li>
       <li><a href="Courses_Foxbooks.html">Courses</a></li> 
       <li><a href="Books_Foxbooks.html">Books</a></li> 
     </ul>
