--- a/404_Foxbooks.html
+++ b/404_Foxbooks.html
@@ -34,6 +34,12 @@
   </div>
   </main>
 
-  <footer><small><hr>(c) L. Knipper - November 27, 2023</footer></small>
+  <footer><small><hr>(c) L. Knipper - November 29, 2023</footer></small>
+  <script>
+    document.getElementById('booksLink').addEventListener('click', function(event) {
+      event.preventDefault(); // Prevent the default behavior of the link
+      window.location.href = '404_Foxbooks.html'; // Redirect to 404_Foxbooks.html
+    });
+  </script>
 </body>
 </html>
