--- a/Books_Foxbooks.html
+++ b/Books_Foxbooks.html
@@ -13,9 +13,15 @@
     <nav>
       <ul>
         <li><a href="foxbooks.html">Home</a></li>
-        <li><a href="Courses_Foxbooks.html">Courses</a></li>
-        <li><a href="Books_Foxbooks.html">Books</a></li>
-        <li><a href="404_Foxbooks.html">Contact (Under Repair)</a></li>
+        <li><a href="Courses_Foxbooks.html">Courses & Books</a></li>
+        <li><a href="404_Foxbooks.html">Contact</a></li>
+        <li><a href="404_Foxbooks.html">Order</a></li>
+        <li><a href="404_Foxbooks.html">Pickup Info</a></li>
+        <li><a href="404_Foxbooks.html">Coupons & Deals</a></li>
+        <li><a href="404_Foxbooks.html">Membership</a></li>
+        <li><a href="404_Foxbooks.html">My Account</a></li>
+        <li><a href="404_Foxbooks.html">Accessories</a></li>
+        <li><a href="404_Foxbooks.html">Wishlist</a></li>
       </ul>
     </nav>
   </header>
@@ -23,18 +29,18 @@
   <main>
     <ul class="breadcrumb">
       <li><a href="foxbooks.html">Home</a></li>
-      <li><a href="Courses_Foxbooks.html">Courses</a></li> 
+      <li><a href="Courses_Foxbooks.html">Courses & Books</a></li> 
     </ul>
    
     <h2>Please explore our offered books</h2>
     <div id="booksContainer"></div>
   </main>
  
-  <footer><small><hr>(c) L. Knipper - November 29, 2023</footer></small>
+  <footer><small><hr>(c) L. Knipper - December 10, 2023</footer></small>
   <script>
    const fetchData = async () => {
       try {
-        const response = await fetch('foxbooks.json');
+        const response = await fetch('https://liam1202.github.io/SD330/foxbooks.json');
         const data = await response.json();
 
         // Get the courseID from the URL
