--- a/foxbooks.html
+++ b/foxbooks.html
@@ -12,13 +12,20 @@
     <nav>
       <ul>
         <li><a href="foxbooks.html">Home</a></li>
-        <li><a href="Courses_Foxbooks.html">Courses</a></li>
-        <li><a href="Books_Foxbooks.html" id="booksLink">Books</a></li>
-        <li><a href="404_Foxbooks.html">Contact (Under Repair)</a></li>
+        <li><a href="Courses_Foxbooks.html">Courses & Books</a></li>
+        <li><a href="404_Foxbooks.html">Contact</a></li>
+        <li><a href="404_Foxbooks.html">Order</a></li>
+        <li><a href="404_Foxbooks.html">Pickup Info</a></li>
+        <li><a href="404_Foxbooks.html">Coupons & Deals</a></li>
+        <li><a href="404_Foxbooks.html">Membership</a></li>
+        <li><a href="404_Foxbooks.html">My Account</a></li>
+        <li><a href="404_Foxbooks.html">Accessories</a></li>
+        <li><a href="404_Foxbooks.html">Wishlist</a></li>
       </ul>
     </nav>
   </header>
   <main>
+    
     <h2>Welcome to FoxBooks</h2>
     <p>Explore our collection of books and courses.</p>
     <div id="div1">
@@ -27,12 +34,9 @@
   </div>
   </main>
  
-  <footer><small><hr>(c) L. Knipper - November 29, 2023</footer></small>
+  <footer><small><hr>(c) L. Knipper - December 10, 2023</footer></small>
   <script>
-    document.getElementById('booksLink').addEventListener('click', function(event) {
-      event.preventDefault(); // Prevent the default behavior of the link
-      window.location.href = '404_Foxbooks.html'; // Redirect to 404_Foxbooks.html
-    });
+    
   </script>
   
 </body>
