--- a/Courses_Foxbooks.html
+++ b/Courses_Foxbooks.html
@@ -103,7 +103,7 @@ if (currentPage !== 'foxbooks.html' && currentPage !== 'Courses_Foxbooks.html') 
     });
 
     // Add a breadcrumb for the Courses page
-    addBreadcrumb('Courses & Books', 'Courses_Foxbooks.html');
+    //addBreadcrumb('Courses & Books', 'Courses_Foxbooks.html');
     
 
     // Add a breadcrumb for the current page
