--- a/Courses_Foxbooks.html
+++ b/Courses_Foxbooks.html
@@ -56,6 +56,7 @@
                             <p><strong>Professor:</strong> ${course.professor}</p>
                             <p><strong>Credits:</strong> ${course.credits}</p>
                             <p><strong>Schedule:</strong> ${course.schedule}</p>
+                            <p><strong>Size:</strong> ${course.size}</p>                           
                           </li>`;
         });
 
